--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>VeggiStore</title>
+  <title>اسواق دير العسل للخضار والفواكه</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
@@ -34,11 +34,11 @@
 <body>
   <div class="container">
     <div class="logo">
-      <h1>🛒 VeggiStore</h1>
+      <h1>🛒متجر للخضار والفواكه </h1>
     </div>
 
     <div class="hero">
-      <h2>نظام متجر خضار جاهز للبيع</h2>
+      <h2>أسواق دير العسل للخضار والفواكة</h2>
       <div class="features">
         <div class="feature">💻 موقع احترافي</div>
         <div class="feature">⚙️ لوحة تحكم</div>
