--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <h1>🛒متجر للخضار والفواكه </h1>
+      <h1>🛒متجر للخضار والفواكة</h1>
     </div>
 
     <div class="hero">
@@ -45,13 +45,13 @@
         <div class="feature">🚚 توصيل</div>
         <div class="feature">💵 دفع عند الاستلام</div>
       </div>
-      <div class="cta">🛍️ اطلب بكل سهولة</div>
+      <a href="#products" class="cta">🛍️ اطلب بكل سهولة</a>
     </div>
 
     <div class="section">
       <div class="grid">
-        <div class="card">
-          <h3>موقع احترافي لبيع الخضروات</h3>
+        <div class="card" id="products">
+          <h3>موقع احترافي لبيع الخضار والفواكه</h3>
           <div class="products">
             <div class="product">
               <strong>Tomatoes</strong><br>$3.50
