--- a/index.html
+++ b/index.html
@@ -54,11 +54,59 @@
           <h3>موقع احترافي لبيع الخضار والفواكه</h3>
           <div class="products">
             <div class="product">
-              <strong>Tomatoes</strong><br>$3.50
+              <strong>بندورة</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>خيار</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>بطاطا</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>كوسا</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>ملفوف</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>زهرة</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>بيتنجان</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>برتقال</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>تفاح</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>موز</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>بطاط حلوه</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>نعنع</strong><br>$3.50
+              <button>أضف للسلة</button>
+            </div>
+              <div class="product">
+              <strong>بقدونس</strong><br>$3.50
               <button>أضف للسلة</button>
             </div>
             <div class="product">
-              <strong>Broccoli</strong><br>$2.00
+              <strong>بروكلي</strong><br>$2.00
               <button>أضف للسلة</button>
             </div>
           </div>
