--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
     <div class="grid">
 
       <div class="card" id="products">
-        <h3>المنتجات المتوفرة</h3>
+        <a href="products.html" class="cta">🛍️ عرض المنتجات</a>
+
+       
 
         <div class="products">
 
