--- a/products.html
+++ b/products.html
@@ -167,7 +167,20 @@
       <strong>جزر</strong>
       <p>$2.50</p>
       <button>أضف للسلة</button>
+       </div>
+    <div class="product">
+     <img src="images/فروله.jpg" alt="فروله">
+      <strong>فروله</strong>
+      <p>$2.50</p>
+      <button>أضف للسلة</button>
     </div>
+    <div class="product">
+     <img src="images/منجا.jpg" alt="منجا">
+      <strong>منجا</strong>
+      <p>$2.50</p>
+      <button>أضف للسلة</button>
+    </div>
+
     
     <div class="product">
      <img src="images/بصل.jpg" alt="يصل">
