--- a/index.html
+++ b/index.html
@@ -208,15 +208,15 @@
         <div class="products">
 
           <div class="product">
-            <img src="https://images.unsplash.com/photo-1567306226416-28f0efdc88ce" alt="بندورة">
+             <img src="images/تفاح.jpg" alt="تفاح">
             <strong>بندورة</strong>
             <span>$3.50</span>
             <button>أضف للسلة</button>
           </div>
 
           <div class="product">
-            <img src="https://images.unsplash.com/photo-1582515073490-dc84f0f4d6c4" alt="خيار">
-            <strong>خيار</strong>
+           <img src="images/موز.jpg" alt="موز">
+            <strong>موز</strong>
             <span>$3.00</span>
             <button>أضف للسلة</button>
           </div>
