--- a/products.html
+++ b/products.html
@@ -161,7 +161,13 @@
       <p>$2.50</p>
       <button>أضف للسلة</button>
     </div>
-    
+     
+    <div class="product">
+     <img src="images/ليمون.jpg" alt="ليمون">
+      <strong>ليمون</strong>
+      <p>$2.50</p>
+      <button>أضف للسلة</button>
+    </div>
     <div class="product">
      <img src="images/جزر.jpg" alt="جزر">
       <strong>جزر</strong>
