--- a/index.html
+++ b/index.html
@@ -233,6 +233,18 @@
         <h3>لوحة تحكم كاملة</h3>
         <p>إدارة الطلبات، المنتجات، والتقارير اليومية بسهولة</p>
       </div>
+ <div class="section">
+      <div class="grid">
+        <div class="card">
+          <h3>تتبع وتوصيل الطلبات</h3>
+          <p>تتبع مباشر لحالة الطلب والمندوب</p>
+        </div>
+        <div class="card">
+          <h3>طلب #152</h3>
+          <p>المندوب: أحمد<br><span style="color:green">في الطريق</span></p>
+        </div>
+      </div>
+    </div>
 
     </div>
   </div>
