--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
         <h3>لوحة تحكم كاملة</h3>
         <p>إدارة الطلبات، المنتجات، والتقارير اليومية بسهولة</p>
       </div>
- <div class="section">
+      </div>
+    </div>
+    <div class="section">
       <div class="grid">
         <div class="card">
           <h3>تتبع وتوصيل الطلبات</h3>
@@ -232,9 +234,6 @@
         </div>
       </div>
     </div>
-
-    
-
   <div class="payments">
     <div class="pay">💵 الدفع عند الاستلام</div>
     <div class="pay">💳 دفع إلكتروني</div>
