--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
         <div class="card">
           <h3>تتبع وتوصيل الطلبات</h3>
           <p>تتبع مباشر لحالة الطلب والمندوب</p>
+          <h2>حالة الطلب: <span id="orderStatus">–</span></h2>
+<div id="map" style="width:100%; height:400px;"></div>
+
         </div>
         <div class="card">
           <h3>طلب #152</h3>
