--- a/index.html
+++ b/index.html
@@ -263,6 +263,19 @@
   const db = getFirestore(app);
   window.db = db; // نخلي db متاحة في app.js
 </script>
+  <script>
+  function initMap() {
+    window.map = new google.maps.Map(document.getElementById("map"), {
+      center: { lat: 31.9454, lng: 35.9284 }, // مركز افتراضي
+      zoom: 12,
+    });
+  }
+</script>
+
+<script async
+  src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_KEY&callback=initMap">
+</script>
+
 
   <script src="js/app.js"></script>
 
