--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>اسواق دير العسل للخضار والفواكه</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
+<!-- Leaflet CSS -->
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+/>
 
   <style>
     *{
@@ -229,6 +234,23 @@
           <p>تتبع مباشر لحالة الطلب والمندوب</p>
           <h2>حالة الطلب: <span id="orderStatus">–</span></h2>
 <div id="map" style="width:100%; height:400px;"></div>
+<!-- مكان ظهور الخريطة -->
+<div id="map" style="width:100%; height:400px;"></div>
+
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<script>
+  const map = L.map('map').setView([31.9454, 35.9284], 13);
+
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; OpenStreetMap contributors'
+  }).addTo(map);
+
+  L.marker([31.9454, 35.9284]).addTo(map)
+    .bindPopup("🚚 المندوب في الطريق")
+    .openPopup();
+</script>
 
         </div>
         <div class="card">
