--- a/index.html
+++ b/index.html
@@ -149,12 +149,9 @@
     </div>
   </div>
 
-  <div class="footer">
-    <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
-    <div class="contact">📞 اتصل الآن</div>
-  </div>
-
-</div>
+  <a href="tel:962789119926" class="contact" style="text-decoration:none; color:#fff;">
+  📞 اتصل الآن
+</a>
 
 <!-- JavaScript -->
 <script>
