--- a/index.html
+++ b/index.html
@@ -149,9 +149,15 @@
     </div>
   </div>
 
-  <a href="tel:962789119926" class="contact" style="text-decoration:none; color:#fff;">
+  <div class="footer">
+    <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
+    <a href="tel:+962789119926" class="contact">
   📞 اتصل الآن
 </a>
+
+  </div>
+
+</div>
 
 <!-- JavaScript -->
 <script>
