--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 
   <div class="footer">
     <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
-    <a href="tel:+962789119926" class="contact">
+    <div class="contact"><a href="tel:962789119926" class="contact" style="text-decoration:none; color:#fff;">
   📞 اتصل الآن
 </a>
-
+</div>
   </div>
 
 </div>
