--- a/index.html
+++ b/index.html
@@ -368,29 +368,44 @@ document.getElementById("cod").addEventListener("click", () => {
 
 });
 </script>
-<script>
-document.getElementById("wallet").addEventListener("click", () => {
 
-  const phoneNumber = "970599123456"; // رقم صاحب المتجر
-  const message = `
-💳 طلب دفع إلكتروني
-المحفظة المطلوبة:
+<!-- JavaScript -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+
+  const phoneNumber = "962789119926"; // 🔴 غيّر رقم الواتساب هنا
+
+  document.getElementById("codBtn").addEventListener("click", () => {
+    const message =
+`🛒 طلب جديد
+💵 طريقة الدفع: الدفع عند الاستلام
+⏰ الوقت: ${new Date().toLocaleString("ar-EG")}`;
+
+    window.open(
+      `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`,
+      "_blank"
+    );
+  });
+
+  document.getElementById("walletBtn").addEventListener("click", () => {
+    const message =
+`💳 طلب دفع إلكتروني
+المحافظ المتوفرة:
 1️⃣ فواتيركم
 2️⃣ دينارك
 3️⃣ Orange Money
 4️⃣ Umniah Wallet
 
-🧾 الرجاء إرسال رقم الطلب والمبلغ
-`;
+🧾 الرجاء إرسال رقم الطلب والمبلغ`;
 
-  window.open(
-    `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`,
-    "_blank"
-  );
+    window.open(
+      `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`,
+      "_blank"
+    );
+  });
+
 });
 </script>
-
-
 </div>
   <script src="js/app.js"></script>
 
