--- a/index.html
+++ b/index.html
@@ -258,24 +258,22 @@
         </div>
       </div>
     </div>
-  <div class="payments">
-  <div id="cod" class="pay" style="cursor:pointer">
-    💵 الدفع عند الاستلام
-  </div>
+  
+  <div class="section">
+    <h2>اختر طريقة الدفع</h2>
 
-  <div id="card" class="pay" style="cursor:pointer">
-    💳 دفع إلكتروني
+    <div class="payments">
+      <div id="codBtn" class="pay">💵 الدفع عند الاستلام</div>
+      <div id="walletBtn" class="pay">💳 الدفع الإلكتروني</div>
+    </div>
   </div>
-</div>
-
 
   <div class="footer">
     <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
     <div class="contact">📞 اتصل الآن</div>
   </div>
+
 </div>
-</div>
-</script>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
