--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
   L.marker([31.9454, 35.9284]).addTo(map)
     .bindPopup("🚚 المندوب في الطريق")
     .openPopup();
-  
+</script>
+
         </div>
         <div class="card">
           <h3>طلب #152</h3>
@@ -258,15 +259,16 @@
         </div>
       </div>
     </div>
-  
-  <div class="section">
-    <h2>اختر طريقة الدفع</h2>
-
-    <div class="payments">
-      <div id="codBtn" class="pay">💵 الدفع عند الاستلام</div>
-      <div id="walletBtn" class="pay">💳 الدفع الإلكتروني</div>
-    </div>
+  <div class="payments">
+  <div id="cod" class="pay" style="cursor:pointer">
+    💵 الدفع عند الاستلام
   </div>
+
+  <div id="card" class="pay" style="cursor:pointer">
+    💳 دفع إلكتروني
+  </div>
+</div>
+
 
   <div class="footer">
     <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
@@ -274,7 +276,6 @@
   </div>
 
 </div>
-
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
   import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
@@ -312,46 +313,86 @@
     .bindPopup("🚚 المندوب في الطريق")
     .openPopup();
 </script>
+<script type="module">
+import { getFirestore, collection, addDoc, serverTimestamp } 
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-<script>
-document.addEventListener("DOMContentLoaded", () => {
+const db = window.db;
 
-  const phoneNumber = "962789119926"; // 🔴 غيّر رقم الواتساب هنا
-
-  document.getElementById("codBtn").addEventListener("click", () => {
-    const message =
-`🛒 طلب جديد
-💵 طريقة الدفع: الدفع عند الاستلام
-⏰ الوقت: ${new Date().toLocaleString("ar-EG")}`;
-
-    window.open(
-      `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`,
-      "_blank"
-    );
+// عند الضغط على الدفع عند الاستلام
+document.getElementById("cod").addEventListener("click", async () => {
+  await addDoc(collection(db, "orders"), {
+    paymentMethod: "الدفع عند الاستلام",
+    status: "بانتظار التأكيد",
+    createdAt: serverTimestamp()
   });
 
-  document.getElementById("walletBtn").addEventListener("click", () => {
-    const message =
-`💳 طلب دفع إلكتروني
-المحافظ المتوفرة:
+  alert("✅ تم اختيار الدفع عند الاستلام");
+});
+
+// عند الضغط على الدفع الإلكتروني
+document.getElementById("card").addEventListener("click", async () => {
+  await addDoc(collection(db, "orders"), {
+    paymentMethod: "دفع إلكتروني",
+    status: "بانتظار الدفع",
+    createdAt: serverTimestamp()
+  });
+
+  alert("💳 تم اختيار الدفع الإلكتروني");
+});
+</script>
+<div class="payments">
+  <div id="cod" class="pay" style="cursor:pointer">
+    💵 الدفع عند الاستلام
+  </div>
+<div class="payments">
+  <div id="wallet" class="pay" style="cursor:pointer">
+    💳 الدفع الإلكتروني
+  </div>
+</div>
+
+
+
+<script>
+document.getElementById("cod").addEventListener("click", () => {
+
+  const phoneNumber = "962789119926"; // ← رقم صاحب المتجر
+  const message = `
+🛒 طلب جديد!
+💵 طريقة الدفع: الدفع عند الاستلام
+⏰ الوقت: ${new Date().toLocaleString('ar-EG')}
+`;
+
+  const url = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
+  window.open(url, "_blank");
+
+});
+</script>
+<script>
+document.getElementById("wallet").addEventListener("click", () => {
+
+  const phoneNumber = "970599123456"; // رقم صاحب المتجر
+  const message = `
+💳 طلب دفع إلكتروني
+المحفظة المطلوبة:
 1️⃣ فواتيركم
 2️⃣ دينارك
 3️⃣ Orange Money
 4️⃣ Umniah Wallet
 
-🧾 الرجاء إرسال رقم الطلب والمبلغ`;
+🧾 الرجاء إرسال رقم الطلب والمبلغ
+`;
 
-    window.open(
-      `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`,
-      "_blank"
-    );
-  });
-
+  window.open(
+    `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`,
+    "_blank"
+  );
 });
 </script>
+
 
 </div>
   <script src="js/app.js"></script>
 
 </body>
-</html> هيك الكود صح لسا لانه لمشكله ما انحلت شو الغلط 
+</html>
